# github-to-pinboard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: sync.yml
src/github_to_pinboard/: sync.py
