[tool.poetry]
name = "github-to-pinboard"
version = "0.1.0"
description = "Sync your GitHub starred repositories to Pinboard bookmarks."
authors = ["Sean Bailey <sean@spb.li>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
typer = "^0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
